<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LHWDashbord">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.irfansyed.umeedenau.validation.LHWHHSections" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="#EEEEEE"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="25dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:scrollbarSize="50dip">
        <!-- Parent layout starts -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#F1F1F1"
            android:orientation="vertical">


            <!-- SecitonC starts -->
            <androidx.cardview.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/Lv_GS1"
                    style="@style/Q_Linerlayout_v">

                    <Button
                        android:id="@+id/btnSectionC"
                        style="@style/Button_collder"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lhwf1header_c" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- SectionC ends-->

            <!-- SecitonD starts -->
            <androidx.cardview.widget.CardView style="@style/Q_CardView">

                <LinearLayout style="@style/Q_Linerlayout_v">

                    <Button
                        android:id="@+id/btnSectionD"
                        style="@style/Button_collder"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lhwf1header_d" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- SectionD ends-->

            <!-- SecitonE starts -->
            <androidx.cardview.widget.CardView style="@style/Q_CardView">

                <LinearLayout style="@style/Q_Linerlayout_v">

                    <Button
                        android:id="@+id/btnSectionE"
                        style="@style/Button_collder"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lhwf1header_e" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- SectionE ends-->

            <!-- SecitonF starts -->
            <androidx.cardview.widget.CardView style="@style/Q_CardView">

                <LinearLayout style="@style/Q_Linerlayout_v">

                    <Button
                        android:id="@+id/btnSectionF"
                        style="@style/Button_collder"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lhwf1header_f" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- SectionF ends-->

            <!-- SecitonG starts -->
            <androidx.cardview.widget.CardView style="@style/Q_CardView">

                <LinearLayout style="@style/Q_Linerlayout_v">

                    <Button
                        android:id="@+id/btnSectionG"
                        style="@style/Button_collder"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lhwf1header_g" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- SectionG ends-->

            <!-- SecitonH starts -->
            <androidx.cardview.widget.CardView style="@style/Q_CardView">

                <LinearLayout style="@style/Q_Linerlayout_v">

                    <Button
                        android:id="@+id/btnSectionH"
                        style="@style/Button_collder"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lhwf1header_h" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- SectionH ends-->


        </LinearLayout>

    </ScrollView>


</layout>